# dj-tag-studio

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: rekordbox-connection.md  rekordbox-my-tags-guide.md
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  settings.rs  types.rs
src-tauri/src/analysis/: audio.rs  comment_map.rs  components_map.rs  energy_map.rs  genre_map.rs  mod.rs  region_map.rs  signals.rs  situation_map.rs  subgenre_map.rs  unmapped.rs
src-tauri/src/export/: mod.rs  serato.rs
src-tauri/src/rekordbox/: backup.rs  content.rs  db.rs  demo.rs  mod.rs  my_tags.rs  paths.rs  playlists.rs  process.rs
src-tauri/src/session/: mod.rs
src-tauri/tests/: cloud_check.rs  deep.rs  multi_tag.rs  sections.rs  tag_compare.rs  tag_names.rs
src/components/: BatchToolbar.tsx  LibraryTable.tsx  MyTagPanel.tsx  RekordboxStatus.tsx  SettingsPanel.tsx  SuggestionsPanel.tsx  TagSchemaEditor.tsx
tag-packs/: rekordbox-default.json
