[package]
name = "dj-tag-studio"
version = "0.1.0"
description = "Rekordbox My Tag tagging accelerator"
authors = ["chriswirth"]
edition = "2021"

[lib]
name = "dj_tag_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sysinfo = "0.33"
lofty = "0.22"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "isomp4", "aiff"] }
rustfft = "6.4"
realfft = "3.5"

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
